# Bunq

./: .gitignore  CLAUDE.md  HACKATHON-PLAN-V4-COVERAGE.md  README.md  d-hackathon-backend-hackathon-plan-v3-md-rosy-marshmallow.md  find_docs.py  setup_test_scan.py
.claude/: settings.local.json
backend/: .env.example  .gitignore  DOCUMENTS_API.md  EXCEPTIONS.md  MAPPERS.md  pom.xml
backend/python-backend/: .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml
backend/python-backend/app/: config.py  deps.py  main.py
backend/python-backend/app/models/: dag.py  sanctions.py
backend/python-backend/app/routers/: evidence.py  health.py  proof_tree.py  sanctions.py
backend/python-backend/app/services/: dag_builder.py  sanctions_screener.py
backend/python-backend/scripts/: README.md  _normalize.py  download_corpus.sh  normalize_sanctions.py  parse_nist_controls.py  requirements.txt
backend/python-backend/scripts/fixtures/: nist_subset_fallback.jsonl
backend/python-backend/scripts/fixtures/ofac_sample/: add.csv  alt.csv  sdn.csv
backend/python-backend/scripts/tests/: conftest.py  test_nist_parse.py  test_normalize.py  test_ofac_parse.py
backend/python-backend/tests/: conftest.py  test_auth.py  test_dag_builder.py  test_evidence_hash.py  test_health.py  test_sanctions_normalize.py  test_sanctions_screen.py
backup/: backup_all.sh  backup_dynamodb.py
eu-regulatory-corpus/: .gitignore  README.md  download.py  index.csv  requirements.txt  sources.yaml
files/: Bunq Prism (check description).txt  audit_trail.json  internship-submission.md  mappings.xlsx  (+2 more)
(+487 files in other folders)
